crates/gitty/tests/snapshots/render__password_prompt.snap
---
source: crates/gitty/tests/render.rs
expression: s
---
 gitty repo  ⎇ main  ↑2 ↓0  Fetching origin 42%                                                [1] Changes  [2] History
 History · 4                                    │ Empty commit message
 ↑ Empty commit message            main  TU 12m │ TU Test User · 022f15d · 12m
 ↑ Describe the project                   TU 5h │───────────────────────────────────────────────────────────────────────
   Add compute helper and print the tota… TU 3d │ 0 changed files
   Initial commit                     TU Aug 23 │                           No files changed
                                                │
                                                │ Diff
                                                │
                                                │
                                                │
            ╭─ git asks ───────────────────────────────────────────────────────────────────────────────────╮
            │ Password for 'https://ann@example.com':                                                      │
            │                                                                                              │
            │  •••••••                                                                                     │
            │                                                                                              │
            │ Enter send · Esc cancel                                                                      │
            ╰──────────────────────────────────────────────────────────────────────────────────────────────╯
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
 j/k move  enter files  / search  tab pane  r scope  D dates  z density  T theme  ? help  q quit
