crates/gitty/tests/snapshots/render__wrap_120.snap
---
source: crates/gitty/tests/render.rs
expression: s
---
 gitty repo  ⎇ main                                                                            [1] Changes  [2] History
 History · 2                                    │ two
   ◎ two                            main  TU 1h │ TU Test User · 00b1eac · +1 −1 · 1h
   ● one                                  TU 1d │───────────────────────────────────────────────────────────────────────
                                                │ 1 changed file
                                                │ M a.txt                                                         +1 −1
                                                │
                                                │ a.txt  +1 −1
                                                │        @@ -1,3 +1,3 @@
                                                │ 1  1   first
                                                │ 2    - short
                                                │    2 + w00 w01 w02 w03 w04 w05 w06 w07 w08 w09 w10 w11 w12 w13 w14 w15
                                                │         w16 w17 w18 w19 w20 w21 w22 w23 w24 w25 w26 w27 w28 w29 w30 w3
                                                │        1 w32 w33 w34 w35 w36 w37 w38 w39 w40 w41 w42 w43 w44 w45 w46 w
                                                │        47 w48 w49 w50 w51 w52 w53 w54 w55 w56 w57 w58 w59
                                                │ 3  3   last
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
                                                │
 j/k line  [/] hunk  e/E expand  s split  w whitespace  O difftool  F full  esc back
